<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>
    <string name="personal_center">个人中心</string>
    <string name="cart">购物车</string>
    <string name="category">类别</string>
    <string name="boutique">精选</string>
    <string name="new_good">新品</string>
    <string name="text">1000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>