<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_des"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/list_background">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/boutique"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_menu_item_boutique"
                android:gravity="center_horizontal"
                android:text="@string/boutique"
                android:textColor="@color/main_botton_text_color" />

            <RadioButton
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_menu_item_category"
                android:gravity="center_horizontal"
                android:text="@string/category"
                android:textColor="@color/main_botton_text_color" />

            <RadioButton
                android:id="@+id/new_good"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_menu_item_new_good"
                android:gravity="center_horizontal"
                android:text="@string/new_good"
                android:textColor="@color/main_botton_text_color" />

            <RadioButton
                android:id="@+id/personal_center"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_menu_item_personal_center"
                android:gravity="center_horizontal"
                android:text="@string/personal_center"
                android:textColor="@color/main_botton_text_color" />

            <RadioButton
                android:id="@+id/car"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_menu_item_cart"
                android:gravity="center_horizontal"
                android:text="@string/cart"
                android:textColor="@color/main_botton_text_color" />
        </RadioGroup>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cart_hint"
            android:text="@string/text" />
    </RelativeLayout>

</RelativeLayout>
